criado classes tables e separação de privilégios por usuário
